# memo-brain

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  TODO.md  config.example.toml
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  main.rs
cli/src/embedding/: model.rs
cli/src/rerank/: mod.rs  model.rs
cli/src/service/: embed.rs  init.rs  list.rs  mod.rs  search.rs
cli/src/ui/: output.rs
docs/: COMMANDS.md
docs/zh-CN/: COMMANDS.md  README.md
local/: Cargo.toml
skills/memo-brain/: SKILL.md
skills/memo-brain/en-US/: SKILL.md  examples.md
skills/memo-brain/zh-CN/: SKILL.md  examples.md
src/: cli.rs  config.rs  main.rs  output.rs
src/db/: connection.rs
src/models/: memory.rs  schema.rs
src/parser/: markdown.rs
src/service/: clear.rs  delete.rs  embed.rs  init.rs  list.rs  merge.rs  mod.rs  search.rs  update.rs
src/ui/: README.md  mod.rs  output.rs
types/: Cargo.toml
types/src/: lib.rs  models.rs
