[package]
name = "memo-local"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Local storage backend for memo using LanceDB"
license = "GPL-3.0-only"

[lib]
name = "memo_local"
path = "src/lib.rs"

[dependencies]
# 依赖 memo-types
memo-types = { path = "../types" }

# 重型数据库依赖
lancedb = "0.23"
arrow-array = "56"
arrow-schema = "56"
futures = "0.3"

# 共享依赖（从 workspace 继承）
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
async-trait = "0.1"
